# pizzini

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Package.swift  README.md  RELEASE-CHECKLIST.md  operator-key.pub.pem  rust-toolchain.toml  transparency-log.ndjson
.cargo/: .global-cache
.github/workflows/: ci.yml
crypto-core/: Cargo.toml  build.rs  cbindgen.toml
crypto-core/examples/: pqxdh_roundtrip.rs
crypto-core/include/: pizzini_crypto_core.h
crypto-core/src/: hashcash.rs  lib.rs  loopback.rs  store.rs
crypto-core/tests/: audit_probes.rs  fix_review.rs  group_cipher.rs  pqxdh.rs  sealed_sender.rs
pizzini/pizzini/: AppPasscode.swift  AttachmentThumbnail.swift  BackgroundRefresh.swift  BlockedContactsView.swift  CaptivePortalProbe.swift  ChatSearch.swift  ChatStore.swift  ChatStoreGroups.swift  ChatView.swift  ContactCard.swift  ContactsListView.swift  ContentView.swift  DBKey.swift  DeviceIntegrity.swift  DiagnosticsView.swift  DuplicateAckSuppressor.swift  FAQView.swift  Group.swift  GroupApply.swift  GroupBootstrap.swift  GroupChatView.swift  GroupEnvelope.swift  GroupInvitationView.swift  GroupOp.swift  GroupSettingsView.swift  HashChainToken.swift  LaunchScreen.storyboard  LockManager.swift  LockOverlayView.swift  MessageComposer.swift  Models.swift  MonochromeButtonStyle.swift  NewGroupSheet.swift  OnboardingView.swift  Outbox.swift  PasscodeEntryView.swift  PasscodeSetupView.swift  PrivacyShieldView.swift  PrivacyShieldWindow.swift  PrivateLog.swift  (+23 more)
pizzini/pizzini.xcodeproj/: project.pbxproj
pizzini/pizzini/Attachments/: AttachmentCopy.swift  AttachmentPicker.swift  AttachmentReassembler.swift  AttachmentSandbox.swift  AttachmentTier.swift  FileChunkEnvelope.swift  FilenameSanitizer.swift  MetadataStripper.swift
pizzini/pizziniNotificationService/: Info.plist  NotificationService.swift  pizziniNotificationService.entitlements
pizzini/pizziniTests/: AppPasscodeTests.swift  AttachmentChunkRetryTests.swift  AttachmentPreviewModeMigrationTests.swift  AttachmentProgressTests.swift  AttachmentTests.swift  AttachmentThumbnailGuardsTests.swift  AutoReconnectDecisionTests.swift  BackgroundRefreshTests.swift  BootstrapPhaseLabelTests.swift  CaptivePortalVerdictTests.swift  ChainRefreshCooldownTests.swift  ChatGroupPersistenceTests.swift  ChatRowStatusTests.swift  ChatSearchTests.swift  ConnectionPillLabelTests.swift  ContactCardValidateTests.swift  DBKeyParamsFloorTests.swift  DeviceIntegrityTests.swift  DialBudgetTests.swift  DuplicateAckSuppressorTests.swift  FAQCopyRegressionTests.swift  GroupApplyTests.swift  GroupAttachmentTests.swift  GroupBootstrapTests.swift  GroupInvitationTests.swift  GroupOpTests.swift  GroupReceiveTrustAnchorTests.swift  HashChainTokenTests.swift  IdentityResetBannerTests.swift  NetworkPathRotationTests.swift  OnboardingExplainerTests.swift  OutboxReconnectDedupeTests.swift  PerRelayFailoverTests.swift  PillStateTests.swift  QALogTests.swift  SQLiteStorageTests.swift  ScreenCaptureMonitorTests.swift  SingleFireTests.swift  StaleControlFilesPurgeTests.swift  SubscriptionTests.swift  (+3 more)
pizzini/pizziniUITests/: AttachFlowUITests.swift  PairAndSendUITests.swift  ScreenCaptureSettingsUITests.swift  pizziniUITests.swift  pizziniUITestsLaunchTests.swift
relay/: Cargo.toml  build.rs
relay/src/: apns.rs  bundle_req_rate_store.rs  chain_validator_store.rs  encrypted_file.rs  main.rs  pending_store.rs  push_token_store.rs  replay_store.rs
scripts/: build-relay-release.sh  build-sqlcipher-amalgamation.sh  build-tor-xcframework.sh  build-xcframework.sh  generate-operator-key.sh  generate-pizzini-onions.sh  install-relay-launchd.sh  restart-relay.sh  sign-transparency-entry.sh  tor-foreground-stress.sh  tor-stress.sh  two-sim-attachment-test.sh  update-macbook.sh
scripts/deploy/: bootstrap.sh  env.example  nftables-pizzini.rules  pizzini-relay.service  redeploy-relay.sh  torrc-pizzini.conf
swift/Sources/PizziniCryptoCore/: Keychain.swift  PizziniCryptoCore.swift  RelayClient.swift  RelayRegistry.swift  Socks5.swift
swift/Sources/PizziniDB/: Database.swift  Statement.swift
swift/Sources/PizziniSQLCipher/include/: PizziniSQLCipher.h  module.modulemap
swift/Sources/PizziniTor/: TorController.swift
swift/Sources/PizziniTorObjC/: TORController.m  TORThread.m
swift/Sources/PizziniTorObjC/include/: TORAuthKey.h  TORCircuit.h  TORConfiguration.h  TORController.h  TORNode.h  TOROnionAuth.h  TORThread.h  TORX25519KeyPair.h
swift/Tests/PizziniCryptoCoreTests/: GroupCipherTests.swift  OnionHostTests.swift  PizziniCryptoCoreTests.swift  RelayFanoutVerdictTests.swift  Socks5DescriptionTests.swift  Socks5Tests.swift
swift/Tests/PizziniDBTests/: DatabaseTests.swift
