[package]
name = "pizzini-crypto-core"
description = "Pizzini cryptographic core: libsignal wrapper exposed to Swift via C ABI."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
# staticlib for linking into the iOS app, cdylib for host-side tests, rlib for Rust consumers
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# libsignal will be added when we wire up PQXDH. No crypto dependencies before then —
# see hard rule: no custom crypto, libsignal does the work.

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
