[package]
name = "pizzini-crypto-core"
description = "Pizzini cryptographic core: libsignal wrapper exposed to Swift via C ABI."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
# staticlib for linking into the iOS app, cdylib for host-side tests, rlib for Rust consumers
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Pinned by tag; Cargo.lock records the resolved commit.
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", tag = "v0.93.2" }
rand = "0.9"

[build-dependencies]
cbindgen = "0.29"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
