[package]
name = "pizzini-crypto-core"
description = "Pizzini cryptographic core: libsignal wrapper exposed to Swift via C ABI."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
# staticlib for linking into the iOS app, cdylib for host-side tests, rlib for Rust consumers
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Pinned by tag; Cargo.lock records the resolved commit.
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", tag = "v0.93.2" }
rand = "0.9"
# now_or_never() — the in-mem libsignal stores resolve futures synchronously,
# so we don't need a real runtime. Promoted from dev-dep when LoopbackState
# moved into the library proper.
futures-util = { version = "0.3", default-features = false }
# HKDF-SHA512 derives the per-peer delivery-token signing key from the
# IdentityKeyPair, so a peer's verify-key is reconstructible from a
# Keychain-backed identity backup with no separate secret. Both crates
# are already in libsignal's transitive tree — no supply-chain delta.
hkdf = "0.12"
sha2 = "0.10"

[build-dependencies]
cbindgen = "0.29"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
