[package]
name = "pizzini-relay"
description = "Pizzini stateless relay (dev: LAN TCP; prod target: Tor onion)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "pizzini-relay"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "signal", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls", "json"] }
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Token signature verification: the relay uses the same XEd25519
# primitive iOS uses to sign, via libsignal's PublicKey::verify_signature.
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", tag = "v0.93.2" }
# First-contact PoW verification on BUNDLE_REQUEST frames. Single hash
# per request, sub-microsecond.
blake3 = { version = "1", default-features = false }
# Encryption-at-rest for the persistent push-token store. ChaCha20-
# Poly1305 picked over AES-GCM so the relay doesn't depend on AES-NI
# being present (some VPS / arm targets don't have it, and a software
# AES fallback runs at a fraction of ChaCha's speed). 96-bit random
# nonces are safe well past any realistic write count. See
# `push_token_store.rs` for the threat-model framing of the persistence.
chacha20poly1305 = "0.10"
# SHA-256 of the running relay binary, computed once at startup and
# returned via the STATUS_RESPONSE frame (reproducible
# builds + binary self-attestation). SHA-256 (not BLAKE3, which the
# rest of the relay uses) is the convention every release
# announcement and external `sha256sum` invocation speaks, so users
# can compare the relay-reported digest against an
# operator-published transparency-log entry without translating
# hash families.
sha2 = { version = "0.10", default-features = false }
# Timing-decorrelation jitter on the recipient-correlated push
# trigger (`maybe_send_push`), mirroring the posture of the iOS
# group-text fanout jitter. Also used by the F-203 fix-review unit
# tests to mint signed HELLO possession proofs.
rand = "0.9"

[dev-dependencies]
# Per-test temp directories for the persistent-store tests
# (chain_validator_store, etc.). Lifetime-scoped cleanup so a
# test run never leaks state between tests.
tempfile = "3"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
